@@ -44,7 +44,12 @@ information on development:
     - develop a PyCharm plugin for FactoryBuilder type hints, and mod dev stuff
 
 
-changelog of snapshot 21w17a released on 28.04.2021 targeting <21w16a>
+changelog of snapshot <21w09a> released on <?> targeting <21w17a>
+    Test Framework:
+        - tweaked some stuff
+
+
+changelog of snapshot 21w17a released on 28.04.2021 targeting 21w17a
     This snapshot breaks again compatibility, mainly the following:
         - reworked how the world generates
         - reworked how the world stores data maps of chunks (e.g. heightmaps)
